--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
         "dev": "nodemon -L -e ts --exec \"tsc -p ./tsconfig.json && node ./build/index.js\""
     },
     "dependencies": {
+        "amqplib": "^0.10.3",
         "express": "^4.18.2",
         "mongoose": "^8.2.2"
     },
     "devDependencies": {
         "@tsconfig/node18": "^18.2.2",
+        "@types/amqplib": "^0.10.5",
         "@types/express": "^4.17.17",
         "@types/node": "^18.15.11",
         "concurrently": "^8.2.2",
