--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@tsconfig/node18": "^18.2.2",
         "@types/amqplib": "^0.10.5",
         "@types/express": "^4.17.17",
+        "@types/mongoose": "^5.11.97",
         "@types/node": "^18.15.11",
         "concurrently": "^8.2.2",
         "nodemon": "^3.1.0",
