--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   node-app:
     build:
-      context: .
+      context: ./services/node-app
       args:
         NODE_ENV: production
     environment:
