--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,13 @@ version: "3"
 
 services:
   node-app:
-    build: .
+    build: ./services/node-app
     ports:
       - "3000:3000"
     environment:
       - PORT=3000
+      - MONGO_USER=admin
+      - MONGO_PASSWORD=mypassword
     depends_on:
       - mongo
       - rabbitmq
