--- a/services/node-app/package.json
+++ b/services/node-app/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "docker-content-generator",
+    "name": "node-app",
     "version": "1.0.0",
     "main": "build/index.js",
     "scripts": {
@@ -8,18 +8,18 @@
         "dev": "nodemon -L -e ts --exec \"tsc -p ./tsconfig.json && node ./build/index.js\""
     },
     "dependencies": {
-        "amqplib": "^0.10.3",
-        "express": "^4.18.2",
-        "mongoose": "^8.2.2"
-    },
-    "devDependencies": {
         "@tsconfig/node18": "^18.2.2",
         "@types/amqplib": "^0.10.5",
-        "@types/express": "^4.17.17",
+        "@types/express": "^4.17.21",
         "@types/mongoose": "^5.11.97",
-        "@types/node": "^18.15.11",
+        "@types/node": "^20.11.30",
+        "amqplib": "^0.10.3",
+        "express": "^4.18.2",
+        "mongoose": "^8.2.2",
+        "typescript": "^5.4.3"
+    },
+    "devDependencies": {
         "concurrently": "^8.2.2",
-        "nodemon": "^3.1.0",
-        "typescript": "^5.4.2"
+        "nodemon": "^3.1.0"
     }
 }
