--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,3 +9,10 @@ services:
     environment:
       - NODE_ENV=production
     command: npm start
+
+  ui:
+    build:
+      context: ./services/ui
+      dockerfile: Dockerfile.prod
+    ports:
+      - "3001:80"
