--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,10 @@ services:
       - mongo
       - rabbitmq
 
+  ui:
+    depends_on:
+      - node-app
+
   mongo:
     image: mongo
     environment:
