--- a/services/campaign-engine/package.json
+++ b/services/campaign-engine/package.json
@@ -2,11 +2,11 @@
     "name": "campaign-engine",
     "version": "1.0.0",
     "description": "",
-    "main": "build/index.js",
+    "main": "build/src/index.js",
     "scripts": {
-        "start": "node build/index.js",
+        "start": "node build/src/index.js",
         "build": "npx tsc",
-        "dev": "nodemon -L -e ts --exec \"tsc -p ./tsconfig.json && node ./build/index.js\""
+        "dev": "nodemon -L -e ts --exec \"tsc -p ./tsconfig.json && node ./build/src/index.js\""
     },
     "keywords": [],
     "author": "",
