--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,11 +3,13 @@ version: "3"
 services:
   node-app:
     build:
-      context: ./services/node-app
+      context: ./services
+      dockerfile: ./node-app/Dockerfile
       args:
         NODE_ENV: development
     volumes:
-      - ./services/node-app/:/app
+      - ./services/node-app/src/:/app/src
+      - ./services/_shared/:/app/_shared
       - /app/node_modules
     environment:
       - NODE_ENV=development
@@ -15,11 +17,13 @@ services:
 
   campaign-engine:
     build:
-      context: ./services/campaign-enginye
+      context: ./services
+      dockerfile: ./campaign-engine/Dockerfile
       args:
         NODE_ENV: development
     volumes:
       - ./services/campaign-engine/src/:/app/src
+      - ./services/_shared/:/app/_shared
       - /app/node_modules
     environment:
       - NODE_ENV=development
