--- a/services/campaign-engine/tsconfig.json
+++ b/services/campaign-engine/tsconfig.json
@@ -7,7 +7,8 @@
         "outDir": "build"
     },
     "include": [
-        "src"
+        "src",
+        "_shared"
     ],
     "exclude": [
         "node_modules",
