--- a/services/campaign-engine/.dockerignore
+++ b/services/campaign-engine/.dockerignore
@@ -1,6 +1,6 @@
-# node_modules
-# build
-# Dockerfile
-# .dockerignore
-# .git
-# .gitignore
+node_modules
+build
+Dockerfile
+.dockerignore
+.git
+.gitignore
