--- a/services/campaign-engine/package.json
+++ b/services/campaign-engine/package.json
@@ -16,9 +16,15 @@
         "@types/amqplib": "^0.10.5",
         "@types/mongoose": "^5.11.97",
         "@types/node": "^20.11.30",
+        "@types/node-cron": "^3.0.11",
+        "@types/xml2js": "^0.4.14",
         "amqplib": "^0.10.3",
+        "axios": "^1.6.8",
         "mongoose": "^8.2.3",
-        "typescript": "^5.4.3"
+        "node-cron": "^3.0.3",
+        "typescript": "^5.4.3",
+        "xml2js": "^0.6.2",
+        "ytdl-core": "^4.11.5"
     },
     "devDependencies": {
         "concurrently": "^8.2.2",
