--- a/services/campaign-engine/tsconfig.json
+++ b/services/campaign-engine/tsconfig.json
@@ -7,8 +7,7 @@
         "outDir": "build"
     },
     "include": [
-        "src",
-        "_shared"
+        "src"
     ],
     "exclude": [
         "node_modules",
