--- a/services/download-engine/package.json
+++ b/services/download-engine/package.json
@@ -16,6 +16,7 @@
         "@types/amqplib": "^0.10.5",
         "@types/node": "^20.11.30",
         "amqplib": "^0.10.3",
+        "axios": "^1.6.8",
         "typescript": "^5.4.3",
         "ytdl-core": "^4.11.5"
     },
