--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -60,6 +60,21 @@ services:
       - NODE_ENV=development
     command: npm run dev
 
+  publish-engine:
+    build:
+      context: ./services
+      dockerfile: ./publish-engine/Dockerfile
+      args:
+        NODE_ENV: development
+    volumes:
+      - ./services/publish-engine/src/:/app/src
+      - ./services/_shared/:/app/_shared
+      - ./shared-file-system/:/app/shared-file-system
+      - /app/node_modules
+    environment:
+      - NODE_ENV=development
+    command: npm run dev
+
   ui:
     build:
       context: ./services/ui
