--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -28,6 +28,7 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=development
+      - CRON_EXPRESSION=* * * * * # every minute
     command: npm run dev
 
   download-engine:
@@ -73,6 +74,22 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=development
+    command: npm run dev
+
+  cleanup-engine:
+    build:
+      context: ./services
+      dockerfile: ./cleanup-engine/Dockerfile
+      args:
+        NODE_ENV: development
+    volumes:
+      - ./services/cleanup-engine/src/:/app/src
+      - ./services/_shared/:/app/_shared
+      - ./shared-file-system/:/app/shared-file-system
+      - /app/node_modules
+    environment:
+      - NODE_ENV=development
+      - CRON_EXPRESSION=* * * * * # every minute
     command: npm run dev
 
   ui:
