--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,6 +9,7 @@ services:
         NODE_ENV: production
     environment:
       - NODE_ENV=production
+      - AUTH_TOKEN=${AUTH_TOKEN}
     volumes:
       - shared-file-system:/app/shared-file-system
     command: npm start
@@ -55,6 +56,7 @@ services:
         NODE_ENV: production
     environment:
       - NODE_ENV=production
+      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
     volumes:
       - shared-file-system:/app/shared-file-system
     command: npm start
