--- a/services/_shared/package.json
+++ b/services/_shared/package.json
@@ -5,7 +5,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tsconfig/node18": "^18.2.4",
     "@types/amqplib": "^0.10.5",
     "amqplib": "^0.10.3"
+  },
+  "scripts": {
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.4.4"
   }
 }
