--- a/services/download-engine/package.json
+++ b/services/download-engine/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "start": "node build/src/index.js",
         "build": "npx tsc",
-        "dev": "nodemon -L -e ts --exec \"tsc -p ./tsconfig.json && node ./build/src/index.js\""
+        "dev": "nodemon -L -e ts --exec \"tsc -p ./tsconfig.json && node ./build/src/index.js\"",
+        "test": "jest"
     },
     "keywords": [],
     "author": "",
@@ -21,7 +22,10 @@
         "ytdl-core": "^4.11.5"
     },
     "devDependencies": {
+        "@types/jest": "^29.5.12",
         "concurrently": "^8.2.2",
-        "nodemon": "^3.1.0"
+        "jest": "^29.7.0",
+        "nodemon": "^3.1.0",
+        "ts-jest": "^29.1.2"
     }
 }
