--- a/services/node-app/package.json
+++ b/services/node-app/package.json
@@ -5,7 +5,8 @@
     "scripts": {
         "start": "node scripts/_prestart.js && node build/src/index.js",
         "build": "npx tsc",
-        "dev": "node scripts/_prestart.js && nodemon -L -e ts --exec \"tsc -p ./tsconfig.json && node ./build/src/index.js\""
+        "dev": "node scripts/_prestart.js && nodemon -L -e ts --exec \"tsc -p ./tsconfig.json && node ./build/src/index.js\"",
+        "test": "jest"
     },
     "dependencies": {
         "@tsconfig/node18": "^18.2.2",
@@ -19,7 +20,10 @@
         "typescript": "^5.4.3"
     },
     "devDependencies": {
+        "@types/jest": "^29.5.12",
         "concurrently": "^8.2.2",
-        "nodemon": "^3.1.0"
+        "jest": "^29.7.0",
+        "nodemon": "^3.1.0",
+        "ts-jest": "^29.1.2"
     }
 }
