--- a/services/campaign-engine/package.json
+++ b/services/campaign-engine/package.json
@@ -25,7 +25,8 @@
         "node-cron": "^3.0.3",
         "typescript": "^5.4.3",
         "xml2js": "^0.6.2",
-        "ytdl-core": "^4.11.5"
+        "ytdl-core": "^4.11.5",
+        "zod": "^3.22.4"
     },
     "devDependencies": {
         "@types/jest": "^29.5.12",
