--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "install:download-engine": "cd services/download-engine && npm install",
     "install:node-app": "cd services/node-app && npm install",
     "install:publish-engine": "cd services/publish-engine && npm install",
-    "install:ui": "cd services/ui && npm install"
+    "install:ui": "cd services/ui && npm install",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "husky": "^8.0.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2"
   }
