--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "",
   "scripts": {
+    "lint": "eslint . --ext .ts --ext .tsx",
     "test": "jest",
     "preinstall": "node services/node-app/scripts/_prestart.js",
     "postinstall": "npm run install:_shared && npm run install:apply-filters-engine && npm run install:campaign-engine && npm run install:cleanup-engine && npm run install:download-engine && npm run install:node-app && npm run install:publish-engine && npm run install:ui",
@@ -22,8 +23,16 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/parser": "^7.6.0",
+    "eslint": "^8.0.0",
+    "eslint-plugin-react": "^7.34.1",
     "husky": "^8.0.0",
     "jest": "^29.7.0",
+    "lint-staged": "^15.2.2",
     "ts-jest": "^29.1.2"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx,md,html,css}": "eslint"
   }
 }
