--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "",
   "scripts": {
     "dev": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up",
+    "build": "bash scripts/build.sh",
+    "build_node": "node scripts/build.js",
     "start": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up",
     "lint": "eslint . --ext .ts --ext .tsx",
     "test": "jest",
