--- a/services/_shared/tsconfig.json
+++ b/services/_shared/tsconfig.json
@@ -2,7 +2,9 @@
     "extends": "@tsconfig/node18/tsconfig.json",
     "compilerOptions": {
         "strict": true,
-        "outDir": "build"
+        "outDir": "build",
+        "esModuleInterop": true,
+        "resolveJsonModule": true
     },
     "include": [
         "."
