--- a/services/publish-engine/Dockerfile
+++ b/services/publish-engine/Dockerfile
@@ -9,8 +9,8 @@ RUN if [ "$NODE_ENV" = "development" ]; \
     fi
 
 COPY ./publish-engine/src/ /app/src
-COPY ./publish-engine/package*.json /app
-COPY ./publish-engine/tsconfig.json /app
+COPY ./publish-engine/package*.json /app/
+COPY ./publish-engine/tsconfig.json /app/
 COPY ./_shared/ /app/_shared
 RUN npm run build
 CMD ["npm", "start"]
