--- a/services/apply-filters-engine/Dockerfile
+++ b/services/apply-filters-engine/Dockerfile
@@ -9,8 +9,8 @@ RUN if [ "$NODE_ENV" = "development" ]; \
     fi
 
 COPY ./apply-filters-engine/src/ /app/src
-COPY ./apply-filters-engine/package*.json/ /app
-COPY ./apply-filters-engine/tsconfig.json /app
+COPY ./apply-filters-engine/package*.json /app/
+COPY ./apply-filters-engine/tsconfig.json /app/
 COPY ./_shared/ /app/_shared
 RUN npm run build
 CMD ["npm", "start"]
