npm run dev modifications

--- a/services/campaign-engine/tsconfig.json
+++ b/services/campaign-engine/tsconfig.json
@@ -10,7 +10,8 @@
         "resolveJsonModule": true
     },
     "include": [
-        "src"
+        "src",
+        "build"
     ],
     "exclude": [
         "node_modules",
