--- a/services/node-app/package.json
+++ b/services/node-app/package.json
@@ -5,15 +5,17 @@
     "scripts": {
         "start": "node scripts/_prestart.js && node build/src/index.js",
         "build": "npx tsc",
-        "dev": "node scripts/_prestart.js && nodemon -L -e ts --exec \"tsc -p ./tsconfig.json && node ./build/src/index.js\"",
+        "dev": "node scripts/_prestart.js && nodemon -L --ignore \"**/shared-file-system/*\" -e ts --exec \"tsc -p ./tsconfig.json && node ./build/src/index.js\"",
         "test": "jest"
     },
     "dependencies": {
         "@tsconfig/node18": "^18.2.2",
         "@types/amqplib": "^0.10.5",
+        "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/node": "^20.11.30",
         "amqplib": "^0.10.3",
+        "cors": "^2.8.5",
         "express": "^4.18.2",
         "mongoose": "^8.2.2",
         "typescript": "^5.4.3"
@@ -24,5 +26,10 @@
         "jest": "^29.7.0",
         "nodemon": "^3.1.0",
         "ts-jest": "^29.1.2"
+    },
+    "nodemonConfig": {
+        "ignore": [
+            "**/shared-file-system/*"
+        ]
     }
 }
