--- a/services/node-app/package.json
+++ b/services/node-app/package.json
@@ -16,6 +16,7 @@
         "@types/multer": "^1.4.11",
         "@types/node": "^20.11.30",
         "amqplib": "^0.10.3",
+        "check-disk-space": "^3.4.0",
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "mongoose": "^8.2.2",
