--- a/services/ui/package.json
+++ b/services/ui/package.json
@@ -3,6 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.5.2",
+        "@fortawesome/free-solid-svg-icons": "^6.5.2",
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "@reduxjs/toolkit": "^2.2.3",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
@@ -16,6 +19,7 @@
         "axios": "^1.6.8",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-hot-toast": "^2.4.1",
         "react-redux": "^9.1.1",
         "react-router-dom": "^6.23.0",
         "react-scripts": "5.0.1",
@@ -60,6 +64,7 @@
         "process": "^0.11.10",
         "querystring-browser": "^1.0.4",
         "react-app-rewired": "^2.2.1",
+        "react-icons": "^5.2.0",
         "stream-browserify": "^3.0.0",
         "stream-http": "^3.2.0",
         "tailwindcss": "^3.4.3",
