--- a/services/node-app/Dockerfile
+++ b/services/node-app/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:18
 WORKDIR /app
-COPY ./node-app/package.json /app
+COPY ./api/package.json /app
 
 ARG NODE_ENV
 RUN if [ "$NODE_ENV" = "development" ]; \
@@ -8,7 +8,7 @@ RUN if [ "$NODE_ENV" = "development" ]; \
     else npm install --only-production; \
     fi
 
-COPY ./node-app/ /app
+COPY ./api/ /app
 COPY ./_shared/ /app/_shared
 RUN npm run build
 ENV PORT 3000
