--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
         "lint": "eslint . --ext .ts --ext .tsx",
         "test": "jest",
         "prepare": "husky install",
-        "preinstall": "node services/node-app/scripts/_prestart.js",
-        "postinstall": "npm run install:_shared && npm run install:apply-filters-engine && npm run install:campaign-engine && npm run install:cleanup-engine && npm run install:download-engine && npm run install:node-app && npm run install:publish-engine && npm run install:ui",
+        "preinstall": "node services/api/scripts/_prestart.js",
+        "postinstall": "npm run install:_shared && npm run install:apply-filters-engine && npm run install:campaign-engine && npm run install:cleanup-engine && npm run install:download-engine && npm run install:api && npm run install:publish-engine && npm run install:ui",
         "install:_shared": "cd services/_shared && npm install",
         "install:apply-filters-engine": "cd services/apply-filters-engine && npm install",
         "install:campaign-engine": "cd services/campaign-engine && npm install",
         "install:cleanup-engine": "cd services/cleanup-engine && npm install",
         "install:download-engine": "cd services/download-engine && npm install",
-        "install:node-app": "cd services/node-app && npm install",
+        "install:api": "cd services/api && npm install",
         "install:publish-engine": "cd services/publish-engine && npm install",
         "install:ui": "cd services/ui && npm install"
     },
