--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -23,6 +23,8 @@ services:
     restart: always
     environment:
       - NODE_ENV=production
+    volumes:
+      - ./logs/campaign-engine/:/app/logs/campaign-engine
     depends_on:
       - api
       - mongo
@@ -40,6 +42,7 @@ services:
       - NODE_ENV=production
     volumes:
       - ./shared-file-system/:/app/shared-file-system
+      - ./logs/download-engine/:/app/logs/download-engine
     depends_on:
       - api
       - rabbitmq
@@ -56,6 +59,7 @@ services:
       - NODE_ENV=production
     volumes:
       - ./shared-file-system/:/app/shared-file-system
+      - ./logs/apply-filters-engine/:/app/logs/apply-filters-engine
     depends_on:
       - api
       - rabbitmq
@@ -73,6 +77,7 @@ services:
       - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
     volumes:
       - ./shared-file-system/:/app/shared-file-system
+      - ./logs/publish-engine/:/app/logs/publish-engine
     depends_on:
       - api
       - rabbitmq
@@ -89,6 +94,7 @@ services:
       - NODE_ENV=production
     volumes:
       - ./shared-file-system/:/app/shared-file-system
+      - ./logs/cleanup-engine/:/app/logs/cleanup-engine
     depends_on:
       - api
     command: npm start
