--- a/services/campaign-engine/package.json
+++ b/services/campaign-engine/package.json
@@ -23,6 +23,7 @@
         "mongoose": "^8.2.3",
         "node-cron": "^3.0.3",
         "typescript": "^5.4.3",
+        "winston": "^3.13.0",
         "xml2js": "^0.6.2",
         "ytdl-core": "^4.11.5",
         "zod": "^3.22.4"
