--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,10 +11,9 @@ services:
       - ./services/api/src/:/app/src
       - ./services/_shared/:/app/_shared
       - /app/node_modules
-    env_file:
-      - ./services/api/.env
     environment:
       - NODE_ENV=development
+      - AUTH_TOKEN=${AUTH_TOKEN}
     command: npm run dev
 
   ui:
@@ -28,5 +27,6 @@ services:
       - WATCHPACK_POLLING=true
     volumes:
       - ./services/ui/src/App/:/app/src/App
+      - ./services/ui/src/config/:/app/src/config
       - ./services/ui/src/index.tsx:/app/src/index.tsx
       - /app/node_modules
