--- a/services/api/package.json
+++ b/services/api/package.json
@@ -21,7 +21,8 @@
         "express": "^4.18.2",
         "mongoose": "^8.2.2",
         "multer": "^1.4.5-lts.1",
-        "typescript": "^5.4.3"
+        "typescript": "^5.4.3",
+        "winston": "^3.13.0"
     },
     "devDependencies": {
         "@types/jest": "^29.5.12",
