--- a/services/cleanup-engine/package.json
+++ b/services/cleanup-engine/package.json
@@ -20,7 +20,8 @@
         "amqplib": "^0.10.3",
         "axios": "^1.6.8",
         "node-cron": "^3.0.3",
-        "typescript": "^5.4.3"
+        "typescript": "^5.4.3",
+        "winston": "^3.13.0"
     },
     "devDependencies": {
         "@types/jest": "^29.5.12",
