--- a/services/download-engine/package.json
+++ b/services/download-engine/package.json
@@ -19,6 +19,7 @@
         "amqplib": "^0.10.3",
         "axios": "^1.6.8",
         "typescript": "^5.4.3",
+        "winston": "^3.13.0",
         "ytdl-core": "^4.11.5"
     },
     "devDependencies": {
