--- a/services/ui/package.json
+++ b/services/ui/package.json
@@ -25,7 +25,8 @@
         "react-scripts": "5.0.1",
         "recharts": "^2.12.6",
         "typescript": "^4.9.5",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "winston": "^3.13.0"
     },
     "scripts": {
         "dev": "react-app-rewired start",
