--- a/services/publish-engine/package.json
+++ b/services/publish-engine/package.json
@@ -15,10 +15,13 @@
     "dependencies": {
         "@tsconfig/node18": "^18.2.2",
         "@types/amqplib": "^0.10.5",
+        "@types/fluent-ffmpeg": "^2.1.24",
         "@types/node": "^20.11.30",
         "amqplib": "^0.10.3",
         "axios": "^1.6.8",
+        "fluent-ffmpeg": "^2.1.3",
         "form-data": "^4.0.0",
+        "instagram-private-api": "^1.46.1",
         "typescript": "^5.4.3",
         "winston": "^3.13.0"
     },
