added comments to nginx.conf and .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
+# On an Ubuntu machine, these variables can be set permanently by
+# adding them to the environment file found at "/etc/environment".
+# A restart is required for them to be applied.
+
 AUTH_TOKEN="changeThis"
 TELEGRAM_BOT_TOKEN="myTelegramBotToken"
