--- a/vm/nginx.conf
+++ b/vm/nginx.conf
@@ -1,3 +1,6 @@
+# This nginx.conf file is used for serving the ui and api
+# when ran on an Ubuntu virtual machine.
+
 server {
     listen 80;
     server_name 00.00.00.00; # Change this to your domain name or IP address
