--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "jest": "^29.7.0",
         "lint-staged": "^15.2.2",
         "ts-jest": "^29.1.2",
+        "typescript": "^5.5.3",
         "xml2js": "^0.6.2"
     },
     "lint-staged": {
