--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@types/xml2js": "^0.4.14",
         "@typescript-eslint/eslint-plugin": "^7.6.0",
         "@typescript-eslint/parser": "^7.6.0",
+        "amqplib": "^0.10.4",
         "axios": "^1.7.2",
         "eslint": "^8.0.0",
         "eslint-plugin-react": "^7.34.1",
@@ -41,7 +42,8 @@
         "lint-staged": "^15.2.2",
         "ts-jest": "^29.1.2",
         "typescript": "^5.5.3",
-        "xml2js": "^0.6.2"
+        "xml2js": "^0.6.2",
+        "zod": "^3.23.8"
     },
     "lint-staged": {
         "**/*.{ts,tsx}": "eslint"
