added @types/amqplib as dev dep at root

--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     },
     "lint-staged": {
         "**/*.{ts,tsx}": "eslint"
+    },
+    "dependencies": {
+        "@types/amqplib": "^0.10.5"
     }
 }
