--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "stop": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml down",
         "lint": "eslint . --ext .ts --ext .tsx",
         "test": "npx jest --testPathIgnorePatterns=smoke.test.ts",
-        "smoke_test": "npx jest --testNamePattern=\"smoke test\"",
+        "sources_test": "ts-node scripts/sources_test.ts",
         "prepare": "husky install",
         "preinstall": "node services/api/scripts/_prestart.js",
         "postinstall": "npm run install:_shared && npm run install:apply-filters-engine && npm run install:campaign-engine && npm run install:cleanup-engine && npm run install:download-engine && npm run install:api && npm run install:publish-engine && npm run install:ui",
@@ -40,6 +40,7 @@
         "jest": "^29.7.0",
         "lint-staged": "^15.2.2",
         "ts-jest": "^29.1.2",
+        "ts-node": "^10.9.2",
         "typescript": "^5.5.3",
         "xml2js": "^0.6.2",
         "zod": "^3.23.8"
